add: ace-attorney

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,6 +94,7 @@ nav:
           - notes/os/index.zh.md
           - notes/os/windows11.zh.md
           - notes/os/archlinux.zh.md
+          - notes/os/android.zh.md
       - Games:
           - notes/games/index.zh.md
           - notes/games/aceattorney.zh.md
