--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,11 @@
 site_name: Xuc's Docs
+site_url: https://docs.panxuc.com/
 site_author: Xuc Pan
-copyright: Copyright &copy; 2023 Xuc Pan
-repo_url: https://github.com/Panxuc/docs
+site_description: Xuc's Docs
 repo_name: Panxuc/docs
+repo_url: https://github.com/Panxuc/docs
 edit_uri: edit/main/docs/
+copyright: Copyright &copy; 2023 Xuc Pan
 theme:
   name: material
   logo: assets/icon.png
@@ -18,14 +20,20 @@ theme:
     - content.action.view
     - content.code.annotate
     - content.code.copy
+    # - content.code.select
     - content.tabs.link
     - content.tooltips
     # - header.autohide
+    # - navigation.expand
     - navigation.footer
     - navigation.indexes
     - navigation.instant
+    # - navigation.instant.prefetch
+    # - navigation.instant.progress
+    # - navigation.prune
     # - navigation.sections
     - navigation.tabs
+    # - navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
     - search.highlight
@@ -34,19 +42,24 @@ theme:
     - toc.follow
     # - toc.integrate
   palette:
-    - scheme: default
-      primary: indigo
-      accent: indigo
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: 跟随系统
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: deep purple
+      accent: deep purple
       toggle:
         icon: material/brightness-7
-        name: Switch to Dark Mode
+        name: 浅色模式
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: black
-      accent: indigo
+      accent: deep purple
       toggle:
         icon: material/brightness-4
-        name: Switch to Light Mode
+        name: 深色模式
 extra:
   social:
     - icon: fontawesome/brands/facebook
@@ -61,6 +74,62 @@ extra:
       link: https://panxuc.github.io/
     - icon: fontawesome/brands/steam
       link: https://steamcommunity.com/id/panxuc/
+plugins:
+  - search:
+      lang:
+        - zh
+      jieba_dict: dict.txt
+  - mkdocs-video
+markdown_extensions:
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - tables
+  - toc:
+      permalink: true
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:materialx.emoji.twemoji
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.keys:
+      separator: +
+      strict: false
+      camel_case: false
+  - pymdownx.magiclink:
+      repo_url_shorthand: true
+      user: Panxuc
+      repo: docs
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.snippets
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 nav:
   - 主页: index.md
   - 项目:
@@ -124,6 +193,7 @@ nav:
           - notes/softwares/vim.md
           - notes/softwares/platformio.md
       - 游戏娱乐:
+          - notes/games/mahjong.md
           - notes/games/aceattorney.md
           - notes/games/persona.md
           - Galgames:
@@ -131,59 +201,3 @@ nav:
   - 关于:
       - about/index.md
       - about/license.md
-plugins:
-  - search:
-      lang:
-        - zh
-      jieba_dict: dict.txt
-  - mkdocs-video
-markdown_extensions:
-  - abbr
-  - admonition
-  - attr_list
-  - def_list
-  - footnotes
-  - md_in_html
-  - tables
-  - toc:
-      permalink: true
-  - pymdownx.arithmatex:
-      generic: true
-  - pymdownx.betterem:
-      smart_enable: all
-  - pymdownx.caret
-  - pymdownx.critic
-  - pymdownx.details
-  - pymdownx.emoji:
-      emoji_generator: !!python/name:materialx.emoji.to_svg
-      emoji_index: !!python/name:materialx.emoji.twemoji
-  - pymdownx.highlight:
-      anchor_linenums: true
-      line_spans: __span
-      pygments_lang_class: true
-  - pymdownx.inlinehilite
-  - pymdownx.keys:
-      separator: +
-      strict: false
-      camel_case: false
-  - pymdownx.magiclink:
-      repo_url_shorthand: true
-      user: Panxuc
-      repo: docs
-  - pymdownx.mark
-  - pymdownx.smartsymbols
-  - pymdownx.snippets
-  - pymdownx.superfences:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
-  - pymdownx.tabbed:
-      alternate_style: true
-  - pymdownx.tasklist:
-      custom_checkbox: true
-  - pymdownx.tilde
-extra_javascript:
-  - javascripts/mathjax.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
