--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,15 +44,15 @@ theme:
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: indigo
-      accent: indigo
+      primary: white
+      accent: deep purple
       toggle:
         icon: material/brightness-7
         name: 浅色模式
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: indigo
-      accent: indigo
+      primary: black
+      accent: deep orange
       toggle:
         icon: material/brightness-4
         name: 深色模式
@@ -86,6 +86,7 @@ markdown_extensions:
   - tables
   - toc:
       permalink: true
+      slugify: !!python/name:pymdownx.slugs.uslugify
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.betterem:
@@ -101,6 +102,7 @@ markdown_extensions:
           - overrides/.icons
   - pymdownx.highlight:
       anchor_linenums: true
+      linenums: true
       line_spans: __span
       pygments_lang_class: true
   - pymdownx.inlinehilite
@@ -113,8 +115,10 @@ markdown_extensions:
       user: Panxuc
       repo: docs
   - pymdownx.mark
+  - pymdownx.progressbar
   - pymdownx.smartsymbols
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      check_paths: true
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
