--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,76 +135,79 @@ extra_javascript:
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 nav:
   - 主页: index.md
+  - 作业:
+      - coursework/index.md
+      - coursework/cpd1.md
+      - coursework/cpd2.md
+      - coursework/pdmes.md
+      - 数据与算法:
+          - coursework/daa/README.md
+          - A + B Problem:
+              - 题目: coursework/daa/prob/1001.md
+              - 答案: coursework/daa/ans/1001.md
+          - The Nth Number in Fibonacci Sequence:
+              - 题目: coursework/daa/prob/1002.md
+              - 答案: coursework/daa/ans/1002.md
+          - 丢失的练习册:
+              - 题目: coursework/daa/prob/2023201.md
+              - 答案: coursework/daa/ans/2023201.md
+          - 军训排队:
+              - 题目: coursework/daa/prob/2023202.md
+              - 答案: coursework/daa/ans/2023202.md
+          - 比武:
+              - 题目: coursework/daa/prob/2023203.md
+              - 答案: coursework/daa/ans/2023203.md
+          - 缺损二叉树:
+              - 题目: coursework/daa/prob/2023204.md
+              - 答案: coursework/daa/ans/2023204.md
+          - 信息传递:
+              - 题目: coursework/daa/prob/2023205.md
+              - 答案: coursework/daa/ans/2023205.md
+          - 跳跳乐:
+              - 题目: coursework/daa/prob/2023206.md
+              - 答案: coursework/daa/ans/2023206.md
+          - 带限矩阵方程组求解:
+              - 题目: coursework/daa/prob/2023207.md
+              - 答案: coursework/daa/ans/2023207.md
+          - 缺失数据恢复:
+              - 题目: coursework/daa/prob/2023208.md
+              - 答案: coursework/daa/ans/2023208.md
   - 项目:
       - projects/index.md
-      - 课程作业:
-          - projects/coursework/cpd1.md
-          - projects/coursework/cpd2.md
-          - projects/coursework/pdmes.md
-          - 数据与算法:
-              - projects/coursework/daa/README.md
-              - A + B Problem:
-                  - 题目: projects/coursework/daa/prob/1001.md
-                  - 答案: projects/coursework/daa/ans/1001.md
-              - The Nth Number in Fibonacci Sequence:
-                  - 题目: projects/coursework/daa/prob/1002.md
-                  - 答案: projects/coursework/daa/ans/1002.md
-              - 丢失的练习册:
-                  - 题目: projects/coursework/daa/prob/2023201.md
-                  - 答案: projects/coursework/daa/ans/2023201.md
-              - 军训排队:
-                  - 题目: projects/coursework/daa/prob/2023202.md
-                  - 答案: projects/coursework/daa/ans/2023202.md
-              - 比武:
-                  - 题目: projects/coursework/daa/prob/2023203.md
-                  - 答案: projects/coursework/daa/ans/2023203.md
-              - 缺损二叉树:
-                  - 题目: projects/coursework/daa/prob/2023204.md
-                  - 答案: projects/coursework/daa/ans/2023204.md
-              - 信息传递:
-                  - 题目: projects/coursework/daa/prob/2023205.md
-                  - 答案: projects/coursework/daa/ans/2023205.md
-              - 跳跳乐:
-                  - 题目: projects/coursework/daa/prob/2023206.md
-                  - 答案: projects/coursework/daa/ans/2023206.md
-              - 带限矩阵方程组求解:
-                  - 题目: projects/coursework/daa/prob/2023207.md
-                  - 答案: projects/coursework/daa/ans/2023207.md
-              - 缺失数据恢复:
-                  - 题目: projects/coursework/daa/prob/2023208.md
-                  - 答案: projects/coursework/daa/ans/2023208.md
-      - 课外活动:
-          - projects/beyondcourse/eesastsd.md
-          - projects/beyondcourse/eesasthd.md
-  - 笔记:
-      - notes/index.md
-      - 清华生活:
-          - notes/tsinghua/socialmedia.md
-          - notes/tsinghua/utilities.md
-          - notes/tsinghua/network.md
-          - notes/tsinghua/courses.md
-          - notes/tsinghua/locations.md
-      - 操作系统:
-          - notes/os/windows11.md
-          - notes/os/archlinux.md
-          - notes/os/steamos.md
-          - notes/os/android.md
-      - 编程语言:
-          - notes/languages/html.md
-          - notes/languages/markdown.md
-          - notes/languages/typst.md
-          - notes/languages/latex.md
-          - Python:
-              - notes/languages/python/matplotlib.md
-      - 工具软件:
-          - notes/softwares/vim.md
-          - notes/softwares/platformio.md
-      - 游戏娱乐:
-          - notes/games/mahjong.md
-          - notes/games/aceattorney.md
-          - notes/games/persona.md
-          - Galgames:
-              - notes/games/galgames/yuzusoft.md
+      - projects/eesastsd.md
+      - projects/eesasthd.md
+  - 清华:
+      - tsinghua/index.md
+      - tsinghua/socialmedia.md
+      - tsinghua/utilities.md
+      - tsinghua/network.md
+      - tsinghua/courses.md
+      - tsinghua/locations.md
+  - 系统:
+      - os/index.md
+      - os/windows11.md
+      - os/archlinux.md
+      - os/steamos.md
+      - os/android.md
+  - 语言:
+      - languages/index.md
+      - languages/html.md
+      - languages/markdown.md
+      - languages/typst.md
+      - languages/latex.md
+      - Python:
+          - languages/python/matplotlib.md
+  - 软件:
+      - softwares/index.md
+      - softwares/vim.md
+      - softwares/platformio.md
+  - 游戏:
+      - games/index.md
+      - games/mahjong.md
+      - games/aceattorney.md
+      - games/persona.md
+      - Galgames:
+          - games/galgames/yuzusoft.md
   - 关于:
       - about/index.md
       - about/license.md
