--- a/.github/workflows/xuc.yml
+++ b/.github/workflows/xuc.yml
@@ -20,5 +20,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material mkdocs-video jieba
+      - run: pip install mkdocs-material mkdocs-video
       - run: mkdocs gh-deploy --force
