--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -186,39 +186,18 @@ nav:
       - coursework/pdmes.md
       - 数据与算法:
           - coursework/daa/README.md
-          - A + B Problem:
-              - 题目: coursework/daa/prob/1001.md
-              - 答案: coursework/daa/ans/1001.md
-          - The Nth Number in Fibonacci Sequence:
-              - 题目: coursework/daa/prob/1002.md
-              - 答案: coursework/daa/ans/1002.md
-          - 丢失的练习册:
-              - 题目: coursework/daa/prob/2023201.md
-              - 答案: coursework/daa/ans/2023201.md
-          - 军训排队:
-              - 题目: coursework/daa/prob/2023202.md
-              - 答案: coursework/daa/ans/2023202.md
-          - 比武:
-              - 题目: coursework/daa/prob/2023203.md
-              - 答案: coursework/daa/ans/2023203.md
-          - 缺损二叉树:
-              - 题目: coursework/daa/prob/2023204.md
-              - 答案: coursework/daa/ans/2023204.md
-          - 信息传递:
-              - 题目: coursework/daa/prob/2023205.md
-              - 答案: coursework/daa/ans/2023205.md
-          - 跳跳乐:
-              - 题目: coursework/daa/prob/2023206.md
-              - 答案: coursework/daa/ans/2023206.md
-          - 带限矩阵方程组求解:
-              - 题目: coursework/daa/prob/2023207.md
-              - 答案: coursework/daa/ans/2023207.md
-          - 缺失数据恢复:
-              - 题目: coursework/daa/prob/2023208.md
-              - 答案: coursework/daa/ans/2023208.md
-          - 小明的火车旅行计划:
-              - 题目: coursework/daa/prob/2023209.md
-              - 答案: coursework/daa/ans/2023209.md
+          - A + B Problem: coursework/daa/ans/1001.md
+          - The Nth Number in Fibonacci Sequence: coursework/daa/ans/1002.md
+          - 丢失的练习册: coursework/daa/ans/2023201.md
+          - 军训排队: coursework/daa/ans/2023202.md
+          - 比武: coursework/daa/ans/2023203.md
+          - 缺损二叉树: coursework/daa/ans/2023204.md
+          - 信息传递: coursework/daa/ans/2023205.md
+          - 跳跳乐: coursework/daa/ans/2023206.md
+          - 带限矩阵方程组求解: coursework/daa/ans/2023207.md
+          - 缺失数据恢复: coursework/daa/ans/2023208.md
+          - 小明的火车旅行计划: coursework/daa/ans/2023209.md
+          - 张量相乘的最小开销问题: coursework/daa/ans/2023210.md
   - 文档:
       - doc/index.md
       - 格式:
